--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,17 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:3.4.2'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
 
         maven {
             credentials {
